# work

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  build.sh  buskod6.cpp  menu.hpp  menu_functions.cpp  menu_items.cpp  read_d6.cpp
CmakeProject/: build.sh
CmakeProject/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
CmakeProject/mario/: .main.swp  build.sh  super_mario
CmakeProject/projects/: CMakeLists.txt
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  menu
build_ninja/googletest/: CTestTestfile.cmake  cmake_install.cmake
build_ninja/menu/: CTestTestfile.cmake  cmake_install.cmake  menu
build_ninja/sort/: CTestTestfile.cmake  cmake_install.cmake
build_ninja/tests/: CTestTestfile.cmake  cmake_install.cmake
dird6/: menu_functions.hpp  menu_items.hpp
hm1/: a.nomokonova.cpp  main.cpp  merge  merge.cpp  merge1  merge1.cpp  merge3  merge3.cpp  mergesort2  mergesort2.cpp  piramida  piramida.cpp
hw2/: .gitignore  MySort.cpp  MySort.hpp  build_run.bat  example  io.cpp  io.hpp  main.cpp  print_array.cpp  print_array.hpp  randArray.cpp  utility.cpp  utility.hpp
hw3/: MySort.cpp  MySort.hpp  main.cpp
include/: insert_sort.hpp  randArray.hpp
longNums/: long_number.cpp  long_number.hpp
menu/: CMakeLists.txt  build.sh  example  main.cpp  menu.hpp  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
sort/: CMakeLists.txt
sort/src/: CMakeLists.txt  build.sh  (+2 more)
sort/tests/: CMakeLists.txt  sorting_test.cpp
(+40 files in other folders)
